# ai_champions_capstone

./: .gitignore  CLAUDE.md  README.md  devenv.nix  pyproject.toml  requirements.txt  temp-reqs.txt
backups/src_original_20250810_202647/: app.py
backups/src_original_20250810_202647/agents/: crew.py
backups/src_original_20250810_202647/graph/: conversation.py
backups/src_original_20250810_202647/llm/: openai_client.py
src/: app.py
src/agents/: crew.py
src/evaluation/: rag_evaluator.py
src/graph/: conversation.py
src/ingestion/: parser.py
src/retriever/: advanced_retrieval.py  embedder.py  text_proc.py  vector_store.py
streamlit_error_logs/: logs-xllvrr-ai_champions_capstone-main-src-app.py-2025-07-28T12_20_19.119Z.txt  logs-xllvrr-ai_champions_capstone-main-src-app.py-2025-08-01T07_02_03.782Z.txt
