[project]
name = "ai-learning-ncss"
version = "0.1.0"
description = "AI Learning Course under NCSS"
requires-python = ">=3.10, <4.0"
dependencies = [
    # Install packages for AI
    "openai",
    "langchain",
    "langchain-openai",
    "llama-index>=0.12.52",
    "pi-heif>=1.0.0",
    "crewai[tools]>=0.1.32",
    # Install packages for file processing
    "unstructured",
    "pdf2image>=1.17.0",
    "pdfminer",
    "pdfminer.six",
    # Install other utilities
    "ipykernel>=6.29.5",
    "dotenv>=0.9.9",
    # Install streamlit
    "streamlit>=1.46.1",
    "pipreqs>=0.5.0",
    "tomlq>=0.1.0",
]
