[project]
name = "ai-learning-ncss"
version = "0.1.0"
description = "AI Learning Course under NCSS"
requires-python = ">=3.10, <4.0"
dependencies = [
    "openai",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "langgraph",
    "llama-index",
    "crewai[tools]",
    "pi-heif",
    "unstructured-inference",
    "pymupdf",
    "pdf2image",
    "pdfminer",
    "ipykernel",
    "dotenv",
    "pipreqs",
    "tomlq",
    "streamlit",
    "faiss-cpu",
]

[tool.basedpyright]
# First, these turn off warnings about (yes) how you ignore warnings:
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
